docs: annotations for swagger docs
