# src/controllers/interfaces/hello.interface.ts
@@ -1,5 +1,0 @@
-import { BasicResponse } from '../../utils/Responses';
-
-export interface IHelloController {
-  sayHello(name?: string): Promise<BasicResponse>;
-}
