# src/routes/index.ts
@@ -1,10 +1,8 @@
 import { Request, Response, Router } from 'express';
-import helloRouter from './hello.routes';
 import newsRouter from './news.routes';
 
 const apiRouter = Router();
 
-apiRouter.use('/hello', helloRouter);
 apiRouter.use('/news', newsRouter);
 
 apiRouter.get('/', (req: Request, res: Response) => {
